fixed title alignment

--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -35,14 +35,6 @@ h1,h2,h3,h4 {
     text-align:center;
 }
 
-h1.hover_title{
-    margin-top: -700px;
-    margin-bottom: 650px; /* -(margin top - fontsize + offest) or sth*/
-    z-index:50;
-    font-size:100px;
-    text-shadow: 2px 0 #fff, -2px 0 #fff, 0 2px #fff, 0 -2px #fff,
-             1px 1px #fff, -1px -1px #fff, 1px -1px #fff, -1px 1px #fff;
-}
 
 section {
     text-align: center;
@@ -56,9 +48,27 @@ section {
     /* background: #ff3333; */
     /* border: 5px solid #5eff00; */
 }
-section.title{
+/* Title section settings*/
+div.title{
     padding:0;
     width: 100%;
+    margin: 0;
+    position: relative;
+    text-align: center;
+}
+img.title{
+    width: 100%;
+    /* border: 5px solid #15d3d3; */
+}
+h1.hover_title{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index:50;
+    font-size:100px;
+    text-shadow: 2px 0 #fff, -2px 0 #fff, 0 2px #fff, 0 -2px #fff,
+    1px 1px #fff, -1px -1px #fff, 1px -1px #fff, -1px 1px #fff;
 }
 
 div {
@@ -109,9 +119,4 @@ p.info {
 img{
     max-width: 100%;
     max-height: 100%;
-}
-img.title{
-    width: 100%;
-    margin: 0;
-    /* border: 5px solid #15d3d3; */
 }
